--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,7 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+@tailwind base; 
+@tailwind components; 
+@tailwind utilities; 
+
+body{
+  background-color: rgb(43, 43, 43);
 }
