--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base; 
 @tailwind components; 
-@tailwind utilities; 
+@tailwind utilities;
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+#__next {
+  height: 100%;
+}
+#map {
+  height: 60%;
+  width: 60%;
+}
