--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,11 +7,13 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: rgb(245 245 245);
 }
 #__next {
   height: 100%;
 }
 #map {
   height: 80%;
-  width: 100%;
+  width: 98%;
+  margin: 10px;
 }
