--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,3 +17,11 @@ body {
   width: 98%;
   margin: 10px;
 }
+
+.task-container li:first-child.snap-center {
+  padding-left: 4%;
+}
+
+.task-container li:last-child.snap-center {
+  padding-right: 4%;
+}
