--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,14 @@ body {
 .task-container li:last-child.snap-center {
   padding-right: 4%;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
