Add styling to Profile sidebar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: rgb(245 245 245);
+  background-color: #f0fdfa
 }
 #__next {
   height: 100%;
