--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,3 +34,23 @@ body {
   min-height: calc(100vh - 56px);
   margin-bottom: 2em ;
 }
+
+.form-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #a78bfa;
+}
+
+.form-scroll::-webkit-scrollbar {
+  width: 15px;
+}
+
+.form-scroll::-webkit-scrollbar-track {
+  background: #ddd6fe;
+  border-radius: 5px;
+}
+
+.form-scroll::-webkit-scrollbar-thumb {
+  background-color: #a78bfa;
+  border-radius: 14px;
+  border: 3px solid #ddd6fe;
+}
