--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components; 
 @tailwind utilities;
 
+/* @layer components {
+  .marker {
+   @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
+  }
+} */
+
 html,
 body {
   height: 100%;
@@ -19,6 +25,7 @@ body {
 }
 
 
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
@@ -34,3 +41,8 @@ body {
   min-height: calc(100vh - 56px);
   margin-bottom: 2em ;
 }
+
+
+/* .marker .infoWindow {
+  all: initial !important;
+} */
