--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,7 +55,29 @@ body {
 }
 
 .form-scroll::-webkit-scrollbar-thumb {
-  background-color: #a78bfa;
+  background-color: #c4b5fd;
+  border-radius: 14px;
+  border: 3px solid #ddd6fe;
+}
+
+.notification-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #a78bfa;
+  margin: 3px;
+}
+
+.notification-scroll::-webkit-scrollbar {
+  width: 15px;
+  margin: 3px;
+}
+
+.notification-scroll::-webkit-scrollbar-track {
+  background: #ddd6fe;
+  border-radius: 5px;
+}
+
+.notification-scroll::-webkit-scrollbar-thumb {
+  background-color: #c4b5fd;
   border-radius: 14px;
   border: 3px solid #ddd6fe;
 }
