--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,6 +187,7 @@ body {
   display: flex !important;
   flex-direction: column !important;
   border-left: 8px solid #f0fdfa !important;
+
 }
 
 .ce-chat-feed-column {
@@ -194,6 +195,9 @@ body {
   display: flex !important;  
   flex-direction: column !important;
   border: 2.5px solid #c4b5fd !important;
+  background-color: #ddd6fe !important;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
+
 }
 
 .ce-chat-list-column {
@@ -203,6 +207,7 @@ body {
   background-color: #ddd6fe !important;
   border-radius: 24px !important;
   border-right: 8px solid #f0fdfa !important;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
 
 }
 
@@ -252,6 +257,7 @@ body {
   border-radius: 0px 24px 24px 0 !important;
   border: 2.5px solid #c4b5fd !important;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
+
 }
 
 .ce-settings div {
@@ -366,6 +372,8 @@ body {
 #ce-ice-breaker-text {
   color: #5b21b6 !important;
 }
+
+
 
 .anticon-paper-clip svg {
   color: #8b5cf6;
